--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>QR Component</title>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +9,7 @@
   <body>
     <div class="container">
       <div class="card">
-        <img src="/images/image-qr-code.png" class="card-image" />
+        <img src="/images/image-qr-code.png" class="card-image" alt="qr-code" />
         <div class="card-text">
           <h2>
             Improve your front-end<br />
