--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="Styles.css" />
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <div class="card">
         <img src="images/image-qr-code.png" class="card-image" alt="qr-code" />
         <div class="card-text">
-          <h2>
+          <h1>
             Improve your front-end<br />
             skills by building projects
-          </h2>
+          </h1>
           <p>
             Scan the QR code to visit Frontend<br />
             Mentor and take your coding skills to<br />
@@ -22,15 +22,16 @@
           </p>
         </div>
       </div>
-    </div>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by
-      <a href="https://www.frontendmentor.io/profile/MauRamos0">Maurus Ramos</a
-      >.
-    </div>
+
+      <footer class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://www.frontendmentor.io/profile/MauRamos0"
+          >Maurus Ramos</a
+        >.
+      </footer>
+    </main>
   </body>
 </html>
-
