--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main class="container">
       <div class="card">
-        <img src="images/image-qr-code.png" class="card-image" alt="qr-code" />
+        <img src="./images/image-qr-code.png" class="card-image" alt="qr-code" />
         <div class="card-text">
           <h1>
             Improve your front-end<br />
